# lpc43xx_blinky_rust

./: .gitignore  Cargo.toml  memory.x
.cargo/: config
src/: main.rs
